# Studium

./: .gitignore  CMakeLists.txt  aufgabe1.cpp  aufgabe2.cpp  aufgabe3.cpp  aufgabe4.cpp  aufgabe5.cpp  aufgabe6.cpp  aufgabe7.cpp  bitstring.cpp  dreifach-kantenbildung-7-1.out.pgm  dreifach-schaerfen-7-1.out.pgm  klartext-5-1.txt  munchtest.cpp
semester1/: CMakeLists.txt  aufgabe1.cpp  aufgabe2.cpp  aufgabe3.cpp  aufgabe4.cpp  aufgabe5.cpp  aufgabe6.cpp  aufgabe7.cpp  dreifach-glaetten-7-1.out.pgm  dreifach-invertieren-7-1.out.pgm  geheim-5-1.txt  munchtest.cpp  text-4-3.txt
semester2/: CMakeLists.txt  aufgabe1.cpp  aufgabe2.cpp
